# Personal-Agent

./: .env.example  PROVIDER_TRANSPORT_RETRY.md  README.md  config.yaml  pyproject.toml
scripts/: cleanup_sessions.py
src/personal_agent/: config.py  main.py
src/personal_agent/adapters/feishu/: adapter.py
src/personal_agent/adapters/telegram/: adapter.py
src/personal_agent/adapters/wechat/: __init__.py  adapter.py
src/personal_agent/agent/: agent.py  context.py  finalize.py  hooks.py  loop.py  retry.py
src/personal_agent/cron/: entry.py  scheduler.py  store.py
src/personal_agent/db/: database.py
src/personal_agent/gateway/: auth.py  gateway.py  session_store.py
src/personal_agent/llm/: __init__.py  anthropic.py  base.py  chat_completions.py  client.py  provider.py  token_counter.py  transport_registry.py
src/personal_agent/mcp/: client.py
src/personal_agent/memory/: embedding_store.py  file_store.py
src/personal_agent/skills/: registry.py
src/personal_agent/skills/builtin/: .usage.json
src/personal_agent/tools/: audit.py  bridge.py  executor.py  registry.py  toolsets.py
src/personal_agent/tools/builtin/: bash.py  clarify.py  confirm.py  delegate.py  execute_code.py  file_read.py  file_write.py  process_tool.py  shell.py  task.py  todo.py
tests/: test_new_tools.py  test_sandbox.py  test_skill_pipeline.py  test_tool_pipeline.py
